# documentation-lab-1

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  ARCHITECTURE.md  CONTRIBUTING.md  Lab_1.docx  README.md  cli.py  config.py  demo_strategy.py  docker-compose.yml  main.py  package.json  pyproject.toml  run.bat  spotify_data.csv  tsconfig.json
Documentation/: CONTRIBUTING_PYTHON.md  Lab_2.docx  QUICK_START.md  TESTING.md  labs.md
src/: __init__.py  app.module.ts  main.py  main.ts
src/bll/: __init__.py  services.py
src/bll/interfaces/: view.interface.ts
src/bll/services/: spotify.service.ts
src/common/: __init__.py  constants.py  constants.ts  logger.py  logger.ts  output_strategy.py
src/dal/: __init__.py  database.py  models.py  repositories.py
src/dal/entities/: playlist.entity.ts  song.entity.ts  subscription.entity.ts  user.entity.ts
src/dal/interfaces/: data-access.interface.ts
src/dal/repositories/: data-access.service.ts
src/generators/: generate-csv.ts  generate_csv.py
src/pl/: __init__.py  routes.py  schemas.py
src/spotify_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: style.css
templates/: base.html  index.html  playlist_detail.html  playlist_form.html  playlists.html  song_form.html  songs.html  statistics.html
